[gd_scene load_steps=6 format=3 uid="uid://bbhpc8hduy4nc"]

[ext_resource type="Texture2D" uid="uid://blth1foie0un3" path="res://tools/share/broken_link.tres" id="1"]
[ext_resource type="Script" path="res://tools/share/share_button.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://smcayrpruaar" path="res://theme/icons/icons.svg" id="3_5q4vk"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("3_5q4vk")
region = Rect2(224, 0, 32, 16)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("3_5q4vk")
region = Rect2(224, 16, 32, 16)

[node name="Share" type="HBoxContainer"]
hint_tooltip = "Open Material Maker web site"
script = ExtResource("2")

[node name="ConnectButton" type="TextureButton" parent="."]
offset_right = 32.0
offset_bottom = 16.0
size_flags_vertical = 4
hint_tooltip = "Connect to web site"
texture_normal = ExtResource("1")

[node name="SendButton" type="TextureButton" parent="."]
offset_left = 36.0
offset_right = 68.0
offset_bottom = 16.0
size_flags_vertical = 4
hint_tooltip = "Send material to web site"
disabled = true
texture_normal = SubResource("1")
texture_disabled = SubResource("2")

[node name="Space" type="Control" parent="."]
offset_left = 72.0
offset_right = 72.0
offset_bottom = 16.0

[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
